tests/snapshots/tokenize__logical_ops.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 1:1\nIdentifier(main) at 1:5\n( at 1:9\n) at 1:10\n{ at 1:12\nint at 2:5\nIdentifier(x) at 2:9\n= at 2:11\nIntLiteral(0) at 2:13\n; at 2:14\nif at 3:5\n( at 3:8\nIdentifier(x) at 3:9\n|| at 3:11\nIntLiteral(1) at 3:14\n) at 3:15\n{ at 3:17\nreturn at 4:9\nIntLiteral(42) at 4:16\n; at 4:18\n} at 5:5\nreturn at 6:5\nIntLiteral(0) at 6:12\n; at 6:13\n} at 7:1\nEOF at 8:1\n"
stderr: ""
status: 0
