tests/snapshots/tokenize__many_params.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 2:1\nIdentifier(add_many) at 2:5\n( at 2:13\nint at 2:14\nIdentifier(a) at 2:18\n, at 2:19\nint at 2:21\nIdentifier(b) at 2:25\n, at 2:26\nint at 2:28\nIdentifier(c) at 2:32\n, at 2:33\nint at 2:35\nIdentifier(d) at 2:39\n, at 2:40\nint at 2:42\nIdentifier(e) at 2:46\n, at 2:47\nint at 2:49\nIdentifier(f) at 2:53\n, at 2:54\nint at 2:56\nIdentifier(g) at 2:60\n, at 2:61\nint at 2:63\nIdentifier(h) at 2:67\n) at 2:68\n{ at 2:70\nreturn at 3:5\nIdentifier(a) at 3:12\n+ at 3:14\nIdentifier(b) at 3:16\n+ at 3:18\nIdentifier(c) at 3:20\n+ at 3:22\nIdentifier(d) at 3:24\n+ at 3:26\nIdentifier(e) at 3:28\n+ at 3:30\nIdentifier(f) at 3:32\n+ at 3:34\nIdentifier(g) at 3:36\n+ at 3:38\nIdentifier(h) at 3:40\n; at 3:41\n} at 4:1\nint at 6:1\nIdentifier(add_10_params) at 6:5\n( at 6:18\nint at 6:19\nIdentifier(a) at 6:23\n, at 6:24\nint at 6:26\nIdentifier(b) at 6:30\n, at 6:31\nint at 6:33\nIdentifier(c) at 6:37\n, at 6:38\nint at 6:40\nIdentifier(d) at 6:44\n, at 6:45\nint at 6:47\nIdentifier(e) at 6:51\n, at 6:52\nint at 6:54\nIdentifier(f) at 6:58\n, at 6:59\nint at 6:61\nIdentifier(g) at 6:65\n, at 6:66\nint at 6:68\nIdentifier(h) at 6:72\n, at 6:73\nint at 6:75\nIdentifier(i) at 6:79\n, at 6:80\nint at 6:82\nIdentifier(j) at 6:86\n) at 6:87\n{ at 6:89\nreturn at 7:5\nIdentifier(a) at 7:12\n+ at 7:14\nIdentifier(b) at 7:16\n+ at 7:18\nIdentifier(c) at 7:20\n+ at 7:22\nIdentifier(d) at 7:24\n+ at 7:26\nIdentifier(e) at 7:28\n+ at 7:30\nIdentifier(f) at 7:32\n+ at 7:34\nIdentifier(g) at 7:36\n+ at 7:38\nIdentifier(h) at 7:40\n+ at 7:42\nIdentifier(i) at 7:44\n+ at 7:46\nIdentifier(j) at 7:48\n; at 7:49\n} at 8:1\nint at 10:1\nIdentifier(main) at 10:5\n( at 10:9\n) at 10:10\n{ at 10:12\nint at 11:5\nIdentifier(result1) at 11:9\n= at 11:17\nIdentifier(add_many) at 11:19\n( at 11:27\nIntLiteral(1, None) at 11:28\n, at 11:29\nIntLiteral(2, None) at 11:31\n, at 11:32\nIntLiteral(3, None) at 11:34\n, at 11:35\nIntLiteral(4, None) at 11:37\n, at 11:38\nIntLiteral(5, None) at 11:40\n, at 11:41\nIntLiteral(6, None) at 11:43\n, at 11:44\nIntLiteral(7, None) at 11:46\n, at 11:47\nIntLiteral(8, None) at 11:49\n) at 11:50\n; at 11:51\nint at 12:5\nIdentifier(result2) at 12:9\n= at 12:17\nIdentifier(add_10_params) at 12:19\n( at 12:32\nIntLiteral(1, None) at 12:33\n, at 12:34\nIntLiteral(2, None) at 12:36\n, at 12:37\nIntLiteral(3, None) at 12:39\n, at 12:40\nIntLiteral(4, None) at 12:42\n, at 12:43\nIntLiteral(5, None) at 12:45\n, at 12:46\nIntLiteral(6, None) at 12:48\n, at 12:49\nIntLiteral(7, None) at 12:51\n, at 12:52\nIntLiteral(8, None) at 12:54\n, at 12:55\nIntLiteral(9, None) at 12:57\n, at 12:58\nIntLiteral(10, None) at 12:60\n) at 12:62\n; at 12:63\nreturn at 13:5\nIntLiteral(0, None) at 13:12\n; at 13:13\n} at 14:1\nEOF at 15:1\n"
stderr: ""
status: 0
