tests/snapshots/tokenize__math_test.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "extern at 6:1\ndouble at 6:8\nIdentifier(sin) at 6:15\n( at 6:18\ndouble at 6:19\nIdentifier(x) at 6:26\n) at 6:27\n; at 6:28\nextern at 7:1\ndouble at 7:8\nIdentifier(cos) at 7:15\n( at 7:18\ndouble at 7:19\nIdentifier(x) at 7:26\n) at 7:27\n; at 7:28\nextern at 8:1\ndouble at 8:8\nIdentifier(tan) at 8:15\n( at 8:18\ndouble at 8:19\nIdentifier(x) at 8:26\n) at 8:27\n; at 8:28\nextern at 11:1\ndouble at 11:8\nIdentifier(asin) at 11:15\n( at 11:19\ndouble at 11:20\nIdentifier(x) at 11:27\n) at 11:28\n; at 11:29\nextern at 12:1\ndouble at 12:8\nIdentifier(acos) at 12:15\n( at 12:19\ndouble at 12:20\nIdentifier(x) at 12:27\n) at 12:28\n; at 12:29\nextern at 13:1\ndouble at 13:8\nIdentifier(atan) at 13:15\n( at 13:19\ndouble at 13:20\nIdentifier(x) at 13:27\n) at 13:28\n; at 13:29\nextern at 14:1\ndouble at 14:8\nIdentifier(atan2) at 14:15\n( at 14:20\ndouble at 14:21\nIdentifier(y) at 14:28\n, at 14:29\ndouble at 14:31\nIdentifier(x) at 14:38\n) at 14:39\n; at 14:40\nextern at 17:1\ndouble at 17:8\nIdentifier(sinh) at 17:15\n( at 17:19\ndouble at 17:20\nIdentifier(x) at 17:27\n) at 17:28\n; at 17:29\nextern at 18:1\ndouble at 18:8\nIdentifier(cosh) at 18:15\n( at 18:19\ndouble at 18:20\nIdentifier(x) at 18:27\n) at 18:28\n; at 18:29\nextern at 19:1\ndouble at 19:8\nIdentifier(tanh) at 19:15\n( at 19:19\ndouble at 19:20\nIdentifier(x) at 19:27\n) at 19:28\n; at 19:29\nextern at 22:1\ndouble at 22:8\nIdentifier(exp) at 22:15\n( at 22:18\ndouble at 22:19\nIdentifier(x) at 22:26\n) at 22:27\n; at 22:28\nextern at 23:1\ndouble at 23:8\nIdentifier(log) at 23:15\n( at 23:18\ndouble at 23:19\nIdentifier(x) at 23:26\n) at 23:27\n; at 23:28\nextern at 24:1\ndouble at 24:8\nIdentifier(log10) at 24:15\n( at 24:20\ndouble at 24:21\nIdentifier(x) at 24:28\n) at 24:29\n; at 24:30\nextern at 27:1\ndouble at 27:8\nIdentifier(pow) at 27:15\n( at 27:18\ndouble at 27:19\nIdentifier(x) at 27:26\n, at 27:27\ndouble at 27:29\nIdentifier(y) at 27:36\n) at 27:37\n; at 27:38\nextern at 28:1\ndouble at 28:8\nIdentifier(sqrt) at 28:15\n( at 28:19\ndouble at 28:20\nIdentifier(x) at 28:27\n) at 28:28\n; at 28:29\nextern at 31:1\ndouble at 31:8\nIdentifier(ceil) at 31:15\n( at 31:19\ndouble at 31:20\nIdentifier(x) at 31:27\n) at 31:28\n; at 31:29\nextern at 32:1\ndouble at 32:8\nIdentifier(floor) at 32:15\n( at 32:20\ndouble at 32:21\nIdentifier(x) at 32:28\n) at 32:29\n; at 32:30\nextern at 33:1\ndouble at 33:8\nIdentifier(fabs) at 33:15\n( at 33:19\ndouble at 33:20\nIdentifier(x) at 33:27\n) at 33:28\n; at 33:29\nextern at 36:1\ndouble at 36:8\nIdentifier(ldexp) at 36:15\n( at 36:20\ndouble at 36:21\nIdentifier(x) at 36:28\n, at 36:29\nint at 36:31\nIdentifier(exp) at 36:35\n) at 36:38\n; at 36:39\nextern at 37:1\ndouble at 37:8\nIdentifier(frexp) at 37:15\n( at 37:20\ndouble at 37:21\nIdentifier(x) at 37:28\n, at 37:29\nint at 37:31\n* at 37:35\nIdentifier(exp) at 37:36\n) at 37:39\n; at 37:40\nextern at 38:1\ndouble at 38:8\nIdentifier(modf) at 38:15\n( at 38:19\ndouble at 38:20\nIdentifier(x) at 38:27\n, at 38:28\ndouble at 38:30\n* at 38:37\nIdentifier(iptr) at 38:38\n) at 38:42\n; at 38:43\nextern at 39:1\ndouble at 39:8\nIdentifier(fmod) at 39:15\n( at 39:19\ndouble at 39:20\nIdentifier(x) at 39:27\n, at 39:28\ndouble at 39:30\nIdentifier(y) at 39:37\n) at 39:38\n; at 39:39\nint at 42:1\nIdentifier(main) at 42:5\n( at 42:9\n) at 42:10\n{ at 42:12\ndouble at 44:5\nIdentifier(s) at 44:12\n= at 44:14\nIdentifier(sqrt) at 44:16\n( at 44:20\nFloatLiteral(4, None) at 44:21\n) at 44:24\n; at 44:25\nint at 45:5\nIdentifier(sqrt_result) at 45:9\n= at 45:21\n( at 45:23\nint at 45:24\n) at 45:27\nIdentifier(s) at 45:28\n; at 45:29\ndouble at 48:5\nIdentifier(a) at 48:12\n= at 48:14\nIdentifier(fabs) at 48:16\n( at 48:20\n- at 48:21\nFloatLiteral(5.5, None) at 48:22\n) at 48:25\n; at 48:26\nint at 49:5\nIdentifier(fabs_result) at 49:9\n= at 49:21\n( at 49:23\nint at 49:24\n) at 49:27\nIdentifier(a) at 49:28\n; at 49:29\ndouble at 52:5\nIdentifier(p) at 52:12\n= at 52:14\nIdentifier(pow) at 52:16\n( at 52:19\nFloatLiteral(2, None) at 52:20\n, at 52:23\nFloatLiteral(3, None) at 52:25\n) at 52:28\n; at 52:29\nint at 53:5\nIdentifier(pow_result) at 53:9\n= at 53:20\n( at 53:22\nint at 53:23\n) at 53:26\nIdentifier(p) at 53:27\n; at 53:28\ndouble at 56:5\nIdentifier(f) at 56:12\n= at 56:14\nIdentifier(floor) at 56:16\n( at 56:21\nFloatLiteral(3.7, None) at 56:22\n) at 56:25\n; at 56:26\nint at 57:5\nIdentifier(floor_result) at 57:9\n= at 57:22\n( at 57:24\nint at 57:25\n) at 57:28\nIdentifier(f) at 57:29\n; at 57:30\ndouble at 60:5\nIdentifier(c) at 60:12\n= at 60:14\nIdentifier(ceil) at 60:16\n( at 60:20\nFloatLiteral(3.2, None) at 60:21\n) at 60:24\n; at 60:25\nint at 61:5\nIdentifier(ceil_result) at 61:9\n= at 61:21\n( at 61:23\nint at 61:24\n) at 61:27\nIdentifier(c) at 61:28\n; at 61:29\nreturn at 64:5\nIdentifier(sqrt_result) at 64:12\n+ at 64:24\nIdentifier(fabs_result) at 64:26\n+ at 64:38\nIdentifier(pow_result) at 64:40\n+ at 64:51\nIdentifier(floor_result) at 64:53\n+ at 64:66\nIdentifier(ceil_result) at 64:68\n; at 64:79\n} at 65:1\nEOF at 66:1\n"
stderr: ""
status: 0
