tests/snapshots/tokenize__nested_conditionals.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 3:1\nIdentifier(main) at 3:5\n( at 3:9\n) at 3:10\n{ at 3:12\nint at 4:5\nIdentifier(result) at 4:9\n= at 4:16\nIntLiteral(0) at 4:18\n; at 4:19\nIdentifier(result) at 6:5\n= at 6:12\nIdentifier(result) at 6:14\n+ at 6:21\nIntLiteral(10) at 6:23\n; at 6:25\nIdentifier(result) at 8:5\n= at 8:12\nIdentifier(result) at 8:14\n+ at 8:21\nIntLiteral(20) at 8:23\n; at 8:25\nIdentifier(result) at 10:7\n= at 10:14\nIdentifier(result) at 10:16\n+ at 10:23\nIntLiteral(5) at 10:25\n; at 10:26\nreturn at 12:5\nIdentifier(result) at 12:12\n; at 12:18\n} at 13:1\nEOF at 14:1\n"
stderr: ""
status: 0
