tests/snapshots/tokenize__offsetof_first.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "struct at 4:1\nIdentifier(Data) at 4:8\n{ at 4:13\nint at 5:5\nIdentifier(a) at 5:9\n; at 5:10\nint at 6:5\nIdentifier(b) at 6:9\n; at 6:10\nint at 7:5\nIdentifier(c) at 7:9\n; at 7:10\n} at 8:1\n; at 8:2\nint at 10:1\nIdentifier(main) at 10:5\n( at 10:9\n) at 10:10\n{ at 10:12\nreturn at 11:5\noffsetof at 11:12\n( at 11:20\nstruct at 11:21\nIdentifier(Data) at 11:28\n, at 11:32\nIdentifier(a) at 11:34\n) at 11:35\n; at 11:36\n} at 12:1\nEOF at 13:1\n"
stderr: ""
status: 0
