tests/snapshots/tokenize__pointer.snap
---
source: tests/tokenize.rs
assertion_line: 40
expression: "&result"
---
stdout: "void at 3:1\nIdentifier(assert) at 3:6\n( at 3:12\nint at 3:13\nIdentifier(expected) at 3:17\n, at 3:25\nint at 3:27\nIdentifier(actual) at 3:31\n, at 3:37\nchar at 3:39\n* at 3:44\nIdentifier(code) at 3:45\n) at 3:49\n; at 3:50\nint at 4:1\nIdentifier(printf) at 4:5\n( at 4:11\nchar at 4:12\n* at 4:17\nIdentifier(fmt) at 4:18\n, at 4:21\n... at 4:23\n) at 4:26\n; at 4:27\nint at 5:1\nIdentifier(sprintf) at 5:5\n( at 5:12\nchar at 5:13\n* at 5:18\nIdentifier(buf) at 5:19\n, at 5:22\nchar at 5:24\n* at 5:29\nIdentifier(fmt) at 5:30\n, at 5:33\n... at 5:35\n) at 5:38\n; at 5:39\nint at 6:1\nIdentifier(vsprintf) at 6:5\n( at 6:13\nchar at 6:14\n* at 6:19\nIdentifier(buf) at 6:20\n, at 6:23\nchar at 6:25\n* at 6:30\nIdentifier(fmt) at 6:31\n, at 6:34\nvoid at 6:36\n* at 6:41\nIdentifier(ap) at 6:42\n) at 6:44\n; at 6:45\nint at 7:1\nIdentifier(strcmp) at 7:5\n( at 7:11\nchar at 7:12\n* at 7:17\nIdentifier(p) at 7:18\n, at 7:19\nchar at 7:21\n* at 7:26\nIdentifier(q) at 7:27\n) at 7:28\n; at 7:29\nint at 8:1\nIdentifier(strncmp) at 8:5\n( at 8:12\nchar at 8:13\n* at 8:18\nIdentifier(p) at 8:19\n, at 8:20\nchar at 8:22\n* at 8:27\nIdentifier(q) at 8:28\n, at 8:29\nlong at 8:31\nIdentifier(n) at 8:36\n) at 8:37\n; at 8:38\nint at 9:1\nIdentifier(memcmp) at 9:5\n( at 9:11\nchar at 9:12\n* at 9:17\nIdentifier(p) at 9:18\n, at 9:19\nchar at 9:21\n* at 9:26\nIdentifier(q) at 9:27\n, at 9:28\nlong at 9:30\nIdentifier(n) at 9:35\n) at 9:36\n; at 9:37\nvoid at 10:1\nIdentifier(exit) at 10:6\n( at 10:10\nint at 10:11\nIdentifier(n) at 10:15\n) at 10:16\n; at 10:17\nlong at 11:1\nIdentifier(strlen) at 11:6\n( at 11:12\nchar at 11:13\n* at 11:18\nIdentifier(s) at 11:19\n) at 11:20\n; at 11:21\nvoid at 12:1\n* at 12:6\nIdentifier(memcpy) at 12:7\n( at 12:13\nvoid at 12:14\n* at 12:19\nIdentifier(dest) at 12:20\n, at 12:24\nvoid at 12:26\n* at 12:31\nIdentifier(src) at 12:32\n, at 12:35\nlong at 12:37\nIdentifier(n) at 12:42\n) at 12:43\n; at 12:44\nvoid at 13:1\n* at 13:6\nIdentifier(memset) at 13:7\n( at 13:13\nvoid at 13:14\n* at 13:19\nIdentifier(s) at 13:20\n, at 13:21\nint at 13:23\nIdentifier(c) at 13:27\n, at 13:28\nlong at 13:30\nIdentifier(n) at 13:35\n) at 13:36\n; at 13:37\nvoid at 16:1\nIdentifier(assert) at 16:6\n( at 16:12\nint at 16:13\nIdentifier(expected) at 16:17\n, at 16:25\nint at 16:27\nIdentifier(actual) at 16:31\n, at 16:37\nchar at 16:39\n* at 16:44\nIdentifier(code) at 16:45\n) at 16:49\n{ at 16:51\nif at 17:3\n( at 17:6\nIdentifier(expected) at 17:7\n== at 17:16\nIdentifier(actual) at 17:19\n) at 17:25\n{ at 17:27\nIdentifier(printf) at 18:5\n( at 18:11\nStringLiteral(\"%s => %d\n\") at 18:12\n, at 18:24\nIdentifier(code) at 18:26\n, at 18:30\nIdentifier(actual) at 18:32\n) at 18:38\n; at 18:39\n} at 19:3\nelse at 19:5\n{ at 19:10\nIdentifier(printf) at 20:5\n( at 20:11\nStringLiteral(\"%s => %d expected but got %d\n\") at 20:12\n, at 20:44\nIdentifier(code) at 20:46\n, at 20:50\nIdentifier(expected) at 20:52\n, at 20:60\nIdentifier(actual) at 20:62\n) at 20:68\n; at 20:69\nIdentifier(exit) at 21:5\n( at 21:9\nIntLiteral(1, None) at 21:10\n) at 21:11\n; at 21:12\n} at 22:3\n} at 23:1\nint at 25:1\nIdentifier(main) at 25:5\n( at 25:9\n) at 25:10\n{ at 25:12\nIdentifier(assert) at 26:3\n( at 26:9\nIntLiteral(3, None) at 26:10\n, at 26:11\n( at 26:13\n{ at 26:14\nint at 26:16\nIdentifier(x) at 26:20\n= at 26:21\nIntLiteral(3, None) at 26:22\n; at 26:23\n* at 26:25\n& at 26:26\nIdentifier(x) at 26:27\n; at 26:28\n} at 26:30\n) at 26:31\n, at 26:32\nStringLiteral(\"({ int x=3; *&x; })\") at 26:34\n) at 26:55\n; at 26:56\nIdentifier(assert) at 27:3\n( at 27:9\nIntLiteral(3, None) at 27:10\n, at 27:11\n( at 27:13\n{ at 27:14\nint at 27:16\nIdentifier(x) at 27:20\n= at 27:21\nIntLiteral(3, None) at 27:22\n; at 27:23\nint at 27:25\n* at 27:29\nIdentifier(y) at 27:30\n= at 27:31\n& at 27:32\nIdentifier(x) at 27:33\n; at 27:34\nint at 27:36\n* at 27:40\n* at 27:41\nIdentifier(z) at 27:42\n= at 27:43\n& at 27:44\nIdentifier(y) at 27:45\n; at 27:46\n* at 27:48\n* at 27:49\nIdentifier(z) at 27:50\n; at 27:51\n} at 27:53\n) at 27:54\n, at 27:55\nStringLiteral(\"({ int x=3; int *y=&x; int **z=&y; **z; })\") at 27:57\n) at 27:101\n; at 27:102\nIdentifier(assert) at 28:3\n( at 28:9\nIntLiteral(5, None) at 28:10\n, at 28:11\n( at 28:13\n{ at 28:14\nint at 28:16\nIdentifier(x) at 28:20\n= at 28:21\nIntLiteral(3, None) at 28:22\n; at 28:23\nint at 28:25\nIdentifier(y) at 28:29\n= at 28:30\nIntLiteral(5, None) at 28:31\n; at 28:32\n* at 28:34\n( at 28:35\n& at 28:36\nIdentifier(x) at 28:37\n- at 28:38\nIntLiteral(1, None) at 28:39\n) at 28:40\n; at 28:41\n} at 28:43\n) at 28:44\n, at 28:45\nStringLiteral(\"({ int x=3; int y=5; *(&x-1); })\") at 28:47\n) at 28:81\n; at 28:82\nIdentifier(assert) at 29:3\n( at 29:9\nIntLiteral(3, None) at 29:10\n, at 29:11\n( at 29:13\n{ at 29:14\nint at 29:16\nIdentifier(x) at 29:20\n= at 29:21\nIntLiteral(3, None) at 29:22\n; at 29:23\nint at 29:25\nIdentifier(y) at 29:29\n= at 29:30\nIntLiteral(5, None) at 29:31\n; at 29:32\n* at 29:34\n( at 29:35\n& at 29:36\nIdentifier(y) at 29:37\n+ at 29:38\nIntLiteral(1, None) at 29:39\n) at 29:40\n; at 29:41\n} at 29:43\n) at 29:44\n, at 29:45\nStringLiteral(\"({ int x=3; int y=5; *(&y+1); })\") at 29:47\n) at 29:81\n; at 29:82\nIdentifier(assert) at 30:3\n( at 30:9\nIntLiteral(5, None) at 30:10\n, at 30:11\n( at 30:13\n{ at 30:14\nint at 30:16\nIdentifier(x) at 30:20\n= at 30:21\nIntLiteral(3, None) at 30:22\n; at 30:23\nint at 30:25\nIdentifier(y) at 30:29\n= at 30:30\nIntLiteral(5, None) at 30:31\n; at 30:32\n* at 30:34\n( at 30:35\n& at 30:36\nIdentifier(x) at 30:37\n- at 30:38\nIntLiteral(1, None) at 30:39\n) at 30:40\n; at 30:41\n} at 30:43\n) at 30:44\n, at 30:45\nStringLiteral(\"({ int x=3; int y=5; *(&x-1); })\") at 30:47\n) at 30:81\n; at 30:82\nIdentifier(assert) at 31:3\n( at 31:9\nIntLiteral(5, None) at 31:10\n, at 31:11\n( at 31:13\n{ at 31:14\nint at 31:16\nIdentifier(x) at 31:20\n= at 31:21\nIntLiteral(3, None) at 31:22\n; at 31:23\nint at 31:25\n* at 31:29\nIdentifier(y) at 31:30\n= at 31:31\n& at 31:32\nIdentifier(x) at 31:33\n; at 31:34\n* at 31:36\nIdentifier(y) at 31:37\n= at 31:38\nIntLiteral(5, None) at 31:39\n; at 31:40\nIdentifier(x) at 31:42\n; at 31:43\n} at 31:45\n) at 31:46\n, at 31:47\nStringLiteral(\"({ int x=3; int *y=&x; *y=5; x; })\") at 31:49\n) at 31:85\n; at 31:86\nIdentifier(assert) at 32:3\n( at 32:9\nIntLiteral(7, None) at 32:10\n, at 32:11\n( at 32:13\n{ at 32:14\nint at 32:16\nIdentifier(x) at 32:20\n= at 32:21\nIntLiteral(3, None) at 32:22\n; at 32:23\nint at 32:25\nIdentifier(y) at 32:29\n= at 32:30\nIntLiteral(5, None) at 32:31\n; at 32:32\n* at 32:34\n( at 32:35\n& at 32:36\nIdentifier(x) at 32:37\n- at 32:38\nIntLiteral(1, None) at 32:39\n) at 32:40\n= at 32:41\nIntLiteral(7, None) at 32:42\n; at 32:43\nIdentifier(y) at 32:45\n; at 32:46\n} at 32:48\n) at 32:49\n, at 32:50\nStringLiteral(\"({ int x=3; int y=5; *(&x-1)=7; y; })\") at 32:52\n) at 32:91\n; at 32:92\nIdentifier(assert) at 33:3\n( at 33:9\nIntLiteral(7, None) at 33:10\n, at 33:11\n( at 33:13\n{ at 33:14\nint at 33:16\nIdentifier(x) at 33:20\n= at 33:21\nIntLiteral(3, None) at 33:22\n; at 33:23\nint at 33:25\nIdentifier(y) at 33:29\n= at 33:30\nIntLiteral(5, None) at 33:31\n; at 33:32\n* at 33:34\n( at 33:35\n& at 33:36\nIdentifier(y) at 33:37\n+ at 33:38\nIntLiteral(1, None) at 33:39\n) at 33:40\n= at 33:41\nIntLiteral(7, None) at 33:42\n; at 33:43\nIdentifier(x) at 33:45\n; at 33:46\n} at 33:48\n) at 33:49\n, at 33:50\nStringLiteral(\"({ int x=3; int y=5; *(&y+1)=7; x; })\") at 33:52\n) at 33:91\n; at 33:92\nIdentifier(assert) at 34:3\n( at 34:9\nIntLiteral(5, None) at 34:10\n, at 34:11\n( at 34:13\n{ at 34:14\nint at 34:16\nIdentifier(x) at 34:20\n= at 34:21\nIntLiteral(3, None) at 34:22\n; at 34:23\n( at 34:25\n& at 34:26\nIdentifier(x) at 34:27\n+ at 34:28\nIntLiteral(2, None) at 34:29\n) at 34:30\n- at 34:31\n& at 34:32\nIdentifier(x) at 34:33\n+ at 34:34\nIntLiteral(3, None) at 34:35\n; at 34:36\n} at 34:38\n) at 34:39\n, at 34:40\nStringLiteral(\"({ int x=3; (&x+2)-&x+3; })\") at 34:42\n) at 34:71\n; at 34:72\nIdentifier(assert) at 35:3\n( at 35:9\nIntLiteral(8, None) at 35:10\n, at 35:11\n( at 35:13\n{ at 35:14\nint at 35:16\nIdentifier(x) at 35:20\n, at 35:21\nIdentifier(y) at 35:23\n; at 35:24\nIdentifier(x) at 35:26\n= at 35:27\nIntLiteral(3, None) at 35:28\n; at 35:29\nIdentifier(y) at 35:31\n= at 35:32\nIntLiteral(5, None) at 35:33\n; at 35:34\nIdentifier(x) at 35:36\n+ at 35:37\nIdentifier(y) at 35:38\n; at 35:39\n} at 35:41\n) at 35:42\n, at 35:43\nStringLiteral(\"({ int x, y; x=3; y=5; x+y; })\") at 35:45\n) at 35:77\n; at 35:78\nIdentifier(assert) at 38:3\n( at 38:9\nIntLiteral(3, None) at 38:10\n, at 38:11\n( at 38:13\n{ at 38:14\nint at 38:16\nIdentifier(x) at 38:20\n[ at 38:21\nIntLiteral(2, None) at 38:22\n] at 38:23\n; at 38:24\nint at 38:26\n* at 38:30\nIdentifier(y) at 38:31\n= at 38:32\n& at 38:33\nIdentifier(x) at 38:34\n; at 38:35\n* at 38:37\nIdentifier(y) at 38:38\n= at 38:39\nIntLiteral(3, None) at 38:40\n; at 38:41\n* at 38:43\nIdentifier(x) at 38:44\n; at 38:45\n} at 38:47\n) at 38:48\n, at 38:49\nStringLiteral(\"({ int x[2]; int *y=&x; *y=3; *x; })\") at 38:51\n) at 38:89\n; at 38:90\nIdentifier(printf) at 65:3\n( at 65:9\nStringLiteral(\"OK\n\") at 65:10\n) at 65:16\n; at 65:17\nreturn at 66:3\nIntLiteral(0, None) at 66:10\n; at 66:11\n} at 67:1\nEOF at 68:1\n"
stderr: ""
status: 0
