tests/snapshots/tokenize__pointer_math.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 1:1\nIdentifier(main) at 1:5\n( at 1:9\n) at 1:10\n{ at 1:12\nint at 2:3\nIdentifier(arr) at 2:7\n[ at 2:10\nIntLiteral(4, None) at 2:11\n] at 2:12\n= at 2:14\n{ at 2:16\nIntLiteral(5, None) at 2:17\n, at 2:18\nIntLiteral(6, None) at 2:20\n, at 2:21\nIntLiteral(7, None) at 2:23\n, at 2:24\nIntLiteral(8, None) at 2:26\n} at 2:27\n; at 2:28\nint at 3:3\n* at 3:7\nIdentifier(p) at 3:8\n= at 3:10\nIdentifier(arr) at 3:12\n; at 3:15\nint at 4:3\n* at 4:7\nIdentifier(q) at 4:8\n= at 4:10\nIdentifier(p) at 4:12\n+ at 4:14\nIntLiteral(2, None) at 4:16\n; at 4:17\nreturn at 5:3\n* at 5:10\nIdentifier(q) at 5:11\n+ at 5:13\n* at 5:15\n( at 5:16\nIdentifier(p) at 5:17\n+ at 5:19\nIntLiteral(1, None) at 5:21\n) at 5:22\n; at 5:23\n} at 6:1\nEOF at 7:1\n"
stderr: ""
status: 0
