tests/snapshots/tokenize__pointers_arrays.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 1:1\nIdentifier(sum) at 1:5\n( at 1:8\nint at 1:9\n* at 1:12\nIdentifier(arr) at 1:14\n, at 1:17\nint at 1:19\nIdentifier(len) at 1:23\n) at 1:26\n{ at 1:28\nint at 2:5\nIdentifier(total) at 2:9\n= at 2:15\nIntLiteral(0, None) at 2:17\n; at 2:18\nfor at 3:5\n( at 3:9\nint at 3:10\nIdentifier(i) at 3:14\n= at 3:16\nIntLiteral(0, None) at 3:18\n; at 3:19\nIdentifier(i) at 3:21\n< at 3:23\nIdentifier(len) at 3:25\n; at 3:28\nIdentifier(i) at 3:30\n= at 3:32\nIdentifier(i) at 3:34\n+ at 3:36\nIntLiteral(1, None) at 3:38\n) at 3:39\n{ at 3:41\nIdentifier(total) at 4:9\n= at 4:15\nIdentifier(total) at 4:17\n+ at 4:23\nIdentifier(arr) at 4:25\n[ at 4:28\nIdentifier(i) at 4:29\n] at 4:30\n; at 4:31\n} at 5:5\nreturn at 6:5\nIdentifier(total) at 6:12\n; at 6:17\n} at 7:1\nint at 9:1\nIdentifier(main) at 9:5\n( at 9:9\n) at 9:10\n{ at 9:12\nint at 10:5\nIdentifier(nums) at 10:9\n[ at 10:13\nIntLiteral(3, None) at 10:14\n] at 10:15\n= at 10:17\n{ at 10:19\nIntLiteral(1, None) at 10:20\n, at 10:21\nIntLiteral(2, None) at 10:23\n, at 10:24\nIntLiteral(3, None) at 10:26\n} at 10:27\n; at 10:28\nint at 11:5\n* at 11:8\nIdentifier(p) at 11:10\n= at 11:12\n& at 11:14\nIdentifier(nums) at 11:15\n[ at 11:19\nIntLiteral(0, None) at 11:20\n] at 11:21\n; at 11:22\nreturn at 12:5\nIdentifier(sum) at 12:12\n( at 12:15\nIdentifier(nums) at 12:16\n, at 12:20\nIntLiteral(3, None) at 12:22\n) at 12:23\n+ at 12:25\n* at 12:27\n( at 12:28\nIdentifier(p) at 12:29\n+ at 12:31\nIntLiteral(1, None) at 12:33\n) at 12:34\n; at 12:35\n} at 13:1\nEOF at 14:1\n"
stderr: ""
status: 0
